fix cropping add backdrop

--- a/src/scss/partials/_mediaEditor.scss
+++ b/src/scss/partials/_mediaEditor.scss
@@ -565,11 +565,17 @@
 
   &__crop-handles {
     position: absolute;
-    // left: 50%;
-    // top: 50%;
-    // transform: translate(-50%, -50%) translateY(var(--translate-y));
-
     border: 1px solid rgba(255, 255, 255, .3);
+
+    &-backdrop {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      background-color: rgba(0, 0, 0, .9);
+    }
 
     &-circle {
       position: absolute;
@@ -595,17 +601,17 @@
       position: absolute;
       background-color: rgba(255, 255, 255, .3);
       width: 1px;
-      height: calc(100% - 2px);
-      top: 1px;
+      height: 100%;
+      top: 0px;
       transform: translateX(-50%);
     }
 
     &-line-h {
       position: absolute;
       background-color: rgba(255, 255, 255, .3);
-      width: calc(100% - 2px);
+      width: 100%;
       height: 1px;
-      left: 1px;
+      left: 0px;
       transform: translateY(-50%);
     }
   }
